[package]
name = "stps-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
sp-keyring = "6.0.0"
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "full", "bit-vec"] }
hex = "0.4.3"
futures = "0.3.21"
log = "0.4.16"
subxt = "0.22.0"
clap = { version = "3.1.15", features = ["derive"] }
serde_json = "1.0.81"
serde = {version = "1.0.137", features = ["derive"] }
async-std = { version = "1.11.0", features = ["attributes"] }
