[package]
name = "k8s-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.85.0", features = [ "derive"] }
k8s-openapi = { version = "0.19.0", features = ["v1_27"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.14.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [ "rustls-tls" ] }
futures = "0.3"