[package]
name = "zombienet-dsl-parser-wrapper"
version = "0.1.2"
edition = "2021"
description = "Zombienet DSL parser: produces a test definition, in json format, that can be used with the ZombieNet's test-runnner."
license = "GPL-3.0-or-later"
authors = ["Parity Technologies <admin@parity.io>", "Javier Viola <javier@parity.io>"]
repository = "https://github.com/paritytech/zombienet"

[lib]
name = "parser_wrapper"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
parser = { path = "../parser" }
wasm-bindgen = "0.2.63"
serde_json = "1.0.85"
