[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "zombienet-parser-cli"
path = "src/cli.rs"

[lib]
name = "parser"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
pest = "2.3.0"
pest_derive = "2.3.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.34"
wasm-bindgen = "0.2.63"
fs-err = "2.8.1"
